--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -11,5 +11,6 @@
 <ion-content padding>
     <p></p>
     <ion-button ion-button (click)="GoToSecondPage()">Device1</ion-button>
+    <ion-button ion-button (click)="GoToThirdPage()">Device2</ion-button>
 
 </ion-content>
