--- a/src/app/dev1/dev1.page.html
+++ b/src/app/dev1/dev1.page.html
@@ -21,7 +21,7 @@
                 <ion-item>
                     <ion-label>Timeframe</ion-label>
                     <ion-select [(ngModel)]="timeframe" value="30" okText="Okay" cancelText="Dismiss">
-                        <ion-select-option value="330">1 Day</ion-select-option>
+                        <ion-select-option value="1">1 Day</ion-select-option>
                         <ion-select-option value="7">7 Days</ion-select-option>
                         <ion-select-option value="30">1 Month</ion-select-option>
                     </ion-select>
@@ -35,7 +35,7 @@
     </ion-card>
 
     <canvas baseChart
-            [datasets]="chartData"
+            [data]="chartData"
             [labels]="chartLabels"
             [chartType]="'line'">
     </canvas>
