--- a/src/app/dev1/dev1.page.html
+++ b/src/app/dev1/dev1.page.html
@@ -9,7 +9,6 @@
     </ion-toolbar>
 </ion-header>
 
-
 <ion-content>
     <ion-card class="ion-padding">
         <canvas baseChart
@@ -26,7 +25,7 @@
             <ion-list>
                 <ion-item>
                     <ion-label>Timeframe</ion-label>
-                    <ion-select [(ngModel)]="timeframe" value="30" okText="Okay" cancelText="Dismiss">
+                    <ion-select [(ngModel)]="timeframe" value="1" okText="Okay" cancelText="Dismiss">
                         <ion-select-option value="1">1 Day</ion-select-option>
                         <ion-select-option value="7">7 Days</ion-select-option>
                         <ion-select-option value="30">1 Month</ion-select-option>
@@ -39,5 +38,9 @@
             </ion-button>
         </ion-card-content>
     </ion-card>
-
+    <ion-card class="ion-padding">
+        <ion-card-content>
+           <h1>${{money | number}}</h1>
+        </ion-card-content>
+    </ion-card>
 </ion-content>
