--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -8,7 +8,7 @@
 
 
 
-<ion-content padding>
+<ion-content class="ion-padding">
     <p></p>
     <ion-button ion-button (click)="GoToSecondPage()">Device1</ion-button>
     <ion-button ion-button (click)="GoToThirdPage()">Device2</ion-button>
