--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,9 +1,13 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Settings
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            Settings
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+    <ion-button expand="full" style="--background:Gray">Dark Mode</ion-button>
+    <ion-button expand="full" style="--background:white">Contact us</ion-button>
+    <ion-button expand="full" style="--background:Green">Help</ion-button>
+</ion-content>
