--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,11 +1,38 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Overview
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            Overview
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+    <ion-card class="ion-padding">
+        <canvas baseChart
+                [datasets]="chartData"
+                [labels]="chartLabels"
+                [chartType]="'line'">
+        </canvas>
+    </ion-card>
+    <ion-card class="ion-padding">
+        <ion-card-content>
+            <h2>Device 1 Cost: ${{moneyTotal | number}}</h2>
+            <h2>Device 1 Power Consumed: {{powerTotal | number}}W</h2>
+            <h2>Total Cost: ${{moneyTotal | number}}</h2>
+            <h2>Total Power Consumed: {{powerTotal | number}}W</h2>
+        </ion-card-content>
+    </ion-card>
+    <ion-card>
+        <ion-card-header>
+            <ion-card-title>All Devices</ion-card-title>
+        </ion-card-header>
+        <ion-button expand="half" ion-button (click)="openUrll()">
+            <ion-icon color = "success" slot="start" name="power"></ion-icon>
+            ON
+        </ion-button>
+        <ion-button expand="half" ion-button (click)="openUrll()">
+            <ion-icon color="danger" slot="start" name="power"></ion-icon>
+            OFF
+        </ion-button>
+    </ion-card>
 </ion-content>
